History
=======

0.5 - Unreleased
----------------

0.4 - 2010-05-12
----------------

- removed desc.replace(...) and added a custom entities method to fix #1.
  [saily]

- don't use version in metadata.xml for the package version in setup.py.
  the metadata version this is meant to reflect the version of the GS profile
  and must not be mixed up with the package version.  [fRiSi]

0.3 - 2010-03-17
----------------

- Replace " with &quot; to keep valid HTML if description contains quotes.
  [saily]

- Made id-generation more resistent against duplicated id's. We now use
  normalized urls to generate the item id.  [saily]

- added support to include portal_tabs in the superfish navigation by setting
  ``ADD_PORTAL_TABS = True`` in subclasses [fRiSi]

- added some documentation targeted at integrators [fRiSi]

- don't render superfish_init.js with ``inline=True`` since this leads to
  strange errors in
  Products.ResourceRegistries-2.0b2-py2.6.egg/Products/ResourceRegistries/browser/scripts.pt
  eg when adding a `StaticText Portlet`

  ``AttributeError: 'DirContainedFileResource5' object has no attribute 'POST'``

  according to the `resourceregistry documentation`_ it's better to set inline to `False`
  in any case.

  .. _`resourceregistry documentation`: http://plone.org/documentation/kb/working-with-resourceregistries/registry-entry-parameters

- Removed caching after some discussions with fRiSi.
  We left the code but disabled it by default, enable it again uncommenting
  the ram.cache line::

    #@ram.cache(_render_sections_cachekey)
    def render(self):
        return self.index()

- Displaying superfish menu only when installed in portal_quickinstaller by
  adding a superfish-browserlayer through browserlayer.xml file.  [saily]

- Changed default values for 'interval' and 'timeout' of hoverIntent which
  controls the show and hide process of the submenu. Read more about